--- a/Audio_Signal_Processing.ipynb
+++ b/Audio_Signal_Processing.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "Pretty much like Matlab, the audio signal is represented by librosa as a one-dimensional array, denoted as y, accompanied by the sampling rate (denoted sr) in Hz at which values of y are sampled. \n",
     "\n",
-    "By default, when loading stereo audio files, the librosa.load() function automatically downmixes to mono by averaging left- and right-channels, and then resamples the monophonic signal to the default rate sr=22050 Hz. To disable that, specify 'sr=None' and 'mono=False'"
+    "By default, when loading stereo audio files, the librosa.load() function automatically downmixes to mono by averaging left- and right-channels, and then resamples the monophonic signal to the default rate sr=22050 Hz. To keep the original sampling rate, specify 'sr=None' and to keep the stereo mode, soecify 'mono=False'."
    ]
   },
   {
@@ -189,7 +189,9 @@
    "source": [
     "Now the sr is set to 44.1 kHz. In order to adequately reproduce a signal, it should be periodically sampled at a rate that is 2X the highest frequency (Nyquist sampling rate theorem). \n",
     "\n",
-    "We can plot the waveform using librosa.display.waveplot(). Note that we have to specify the sr (in this case 44.1 kHz). Now the duration the of the signal is around ~1.6s, same as calculated."
+    "We can plot the waveform using librosa.display.waveplot(). Note that we have to specify the sr (in this case 44.1 kHz). Now the duration the of the signal is around ~1.6s, same as calculated.\n",
+    "\n",
+    "In the time domain, the information we get is simply the loudness of the audio signal at each time frame (1/44100 s). "
    ]
   },
   {
@@ -241,7 +243,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Previously in time domain, it was simply a variation of audio signal amplitude at each time (1/44100 s). Signal is made up many sine waves with different aplitudes and phases which can be decomposed."
+    "To get more information, it is necessary to transform into the frequency domain. \n",
+    "\n",
+    "Before we get into that, we should understand that signal is made up many sine waves with different aplitudes and phases which can be decomposed."
    ]
   },
   {
@@ -429,6 +433,17 @@
    "source": [
     "wave_10000Hz = sine_wave(10000)\n",
     "Audio(wave_10000Hz, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Those are clean sine wave signals. In reality, signals are composed of many sinusoidal signals with different frequencies (like the vocal audio signal we plotted earlier). \n",
+    "\n",
+    "In time domain, we get the amplitude of the signal over time. While in frequency domain, the information we get is the amplitude of the various sine wave frequencies present in the signal.\n",
+    "\n",
+    "The construction/decomposition of these waves can be done using Fourier transform."
    ]
   },
   {
