--- a/Audio_Signal_Processing.ipynb
+++ b/Audio_Signal_Processing.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -204,10 +204,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x78c638f1ed30>"
+       "<matplotlib.collections.PolyCollection at 0x7905daa524e0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,10 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def sine_wave(freq, clip_length=1, sr=44100):\n",
     "    t = np.linspace(0, clip_length, int(clip_length*sr), endpoint=False)\n",
     "    return 0.1*np.sin(2*np.pi*freq*t)"
@@ -268,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x78c63b2fb438>"
+       "<matplotlib.collections.PolyCollection at 0x7905da9fdb00>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -308,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x78c63b33c978>"
+       "<matplotlib.collections.PolyCollection at 0x7905da9456d8>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +426,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,10 +437,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Those are clean sine wave signals. In reality, signals are composed of many sinusoidal signals with different frequencies (like the vocal audio signal we plotted earlier). \n",
+    "Those are clean sine wave signals. In reality, real signals are composed of many sinusoidal signals with different frequencies (like the vocal audio signal we plotted earlier). \n",
     "\n",
     "In time domain, we get the amplitude of the signal over time. While in frequency domain, the information we get is the amplitude of the various sine wave frequencies present in the signal.\n",
     "\n",
@@ -455,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x78661acc77b8>"
+       "<matplotlib.colorbar.Colorbar at 0x7905da93c128>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -506,8 +507,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "db_spec = librosa.power_to_db(spec, ref=np.max,)\n",
     "librosa.display.specshow(db_spec,y_axis='mel', x_axis='s', sr=sr)\n",
     "plt.colorbar();"
